# Auto-OSBC

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  check_project_structure.py  install_script.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py  terminal  todo.txt
documentation/: next_composer.txt
src/: EventAPI_test.py  OSBC.py
src/controller/: bot_controller.py
src/model/: bot.py  runelite_bot.py
src/model/near_reality/: combat.py  fishing.py  mining.py  nr_bot.py  pickpocket.py  woodcutting.py
src/model/osrs/: __init__.py  agility.py  fishing.py  mining.py  osrs_bot.py  smelter.py  template.py  woodcutter.py
src/model/osrs/combat/: combat.py  custom_settings.properties
src/model/zaros/: woodcutting.py
src/runelite_settings/: osrs_settings.properties
src/utilities/: color.py  debug.py  game_launcher.py  geometry.py  imagesearch.py  mouse.py  ocr.py  options_builder.py  random_util.py  runelite_cv.py  settings_manager.py  sprite_scraper.py  type_utils.py  window.py
src/utilities/api/: __init__.py  events_client.py  events_server.py  item_ids.py  status_socket.py  test_output.txt
src/utilities/fonts/: __init__.py
src/view/: home_view_runelite.py  info_frame.py  settings_view.py  sprite_scraper_view.py
